--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
       <p>OreA</p>
       <nav class="nav">
          <ul class="menu">
-            <li><a href="/port.html">Home</a></li>
-            <li><a href="./port.html#AboutMe">About</a></li>
-            <li><a href="./port.html#Services">Services</a></li>
-            <li><a href="./port.html#Porjects">Projects</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="./index.html#AboutMe">About</a></li>
+            <li><a href="./index.html#Services">Services</a></li>
+            <li><a href="./index.html#Porjects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
          </ul>
       </nav>
