--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </section>
             <section class="projFlex3">
                <article>
-                  <a href="https://portfolio.praiselove.repl.co/" target="_blank">
+                  <a href="https://annabelledumbi.github.io/my_portfolio/" target="_blank">
                      <img src="images/portfolio.praiselove.repl.co_ (1).png" alt="">
                   </a>
                </article>
