--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
                            <hr />
                            <ul>
                               <li>HTML & CSS</li>
-                              <li>JavaScript</li>
-                              <li>Python</li>
+                              <li>JavaScript, ReactJs, NextJs</li>
+                              <li>NodeJs, MongoDb</li>
                               <li>Responsive Design</li>
                               <li>Problem-Solving</li>
-                              <li>Team Work</li>
+                              <li>Team Work, Open Source Contribution</li>
                               <li>Communication</li>
                            </ul>
                         </article>
